# bazel-glob-bug

./: BUILD.bazel  README.md
